methods.picture.PictureMono3.scala.error
Compilation error:
PictureMono3:29: error: not found: value gavance
  gavance(7)
  ^